--- a/.github/workflows/CreateLicenseALF.yml
+++ b/.github/workflows/CreateLicenseALF.yml
@@ -10,30 +10,16 @@ jobs:
       matrix:
         unity-version:
         - 2019.3.6f1
-    
+
+    container: docker://gableroux/unity3d:${{ matrix.unity-tag }}
+
     steps:
-    - uses: pCYSl5EDgo/setup-unity@master
-      with:
-        unity-version: ${{ matrix.unity-version }}
-    - name: Create Manual Activation File
-      run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -logfile -createManualActivationFile || exit 0
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1.0.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: setup-${{ matrix.unity-version }}
-        release_name: Release setup-Unity ${{ matrix.unity-version }}
-        draft: false
-        prerelease: false
-    - name: Upload Release Asset
-      id: upload-release-asset 
-      uses: actions/upload-release-asset@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: Unity_v${{ matrix.unity-version }}.alf
-        asset_name: Unity_v${{ matrix.unity-version }}.alf
-        asset_content_type: application/xml
+      - run: mkdir artifact
+      - run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -logfile -createManualActivationFile || exit 0
+      - run: cp "Unity_v$UNITY_VERSION.alf" artifact
+        env:
+          UNITY_VERSION: ${{ matrix.unity-tag }}
+      - uses: actions/upload-artifact@master
+        with:
+          name: ${{ matrix.unity-tag }}
+          path: artifact
