--- a/packages.config
+++ b/packages.config
@@ -5,4 +5,9 @@
   <package id="AWSSDK.S3" version="3.3.110.38" targetFramework="net471" />
   <package id="AWSSDK.SecurityToken" version="3.3.104.46" targetFramework="net471" />
   <package id="MessagePackAnalyzer" version="2.1.90" targetFramework="net471" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net471" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net471" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net471" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net471" />
+  <package id="Utf8Json" version="1.3.7" targetFramework="net471" />
 </packages>
